[package]
name = "solana-program-runtime"
description = "Solana program runtime"
documentation = "https://docs.rs/solana-program-runtime"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
base64 = "0.22.1"
bincode = "1.3.3"
enum-iterator = "1.5.0"
itertools = "0.12.1"
log = "0.4.27"
percentage = "0.1.0"
rand = "0.8.5"
serde = "1.0.219"
solana-account = { version = "2.2.1", features = ["bincode"] }
solana-clock = "2.2.1"
solana-compute-budget = "2.2.4"
solana-epoch-rewards = "2.2.1"
solana-epoch-schedule = "2.2.1"
solana-feature-set = "2.2.1"
solana-frozen-abi = { version = "2.2.1", optional = true, features = [
    "frozen-abi",
] }
solana-frozen-abi-macro = { version = "2.2.1", optional = true, features = [
    "frozen-abi",
] }
solana-hash = "2.2.1"
solana-instruction = "2.2.1"
solana-last-restart-slot = "2.2.1"
solana-log-collector = "2.2.4"
solana-measure = "2.2.4"
solana-metrics = { version = "2.2.4", optional = true }
solana-precompiles = "2.2.1"
solana-pubkey = "2.2.1"
solana-rent = "2.2.1"
solana-sbpf = "0.10.0"
solana-sdk-ids = "2.2.1"
solana-slot-hashes = "2.2.1"
solana-stable-layout = "2.2.1"
solana-sysvar = "2.2.1"
solana-sysvar-id = "2.2.1"
solana-timings = "2.2.4"
solana-transaction-context = "2.2.1"
solana-type-overrides = "2.2.4"
thiserror = "2.0.16"

[dev-dependencies]
assert_matches = "1.5.0"
solana-compute-budget = { version = "2.2.4", features = [
    "dev-context-only-utils",
] }
solana-instruction = { version = "2.2.1", features = ["bincode"] }
solana-pubkey = { version = "2.2.1", features = ["rand"] }
solana-transaction-context = { version = "2.2.1", features = [
    "dev-context-only-utils",
] }
test-case = "3.3.1"

[lib]
crate-type = ["lib"]
name = "solana_program_runtime"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[features]
dummy-for-ci-check = ["metrics"]
frozen-abi = [
    "dep:solana-frozen-abi",
    "dep:solana-frozen-abi-macro",
    "solana-compute-budget/frozen-abi",
]
metrics = ["dep:solana-metrics"]
shuttle-test = [
    "solana-type-overrides/shuttle-test",
    "solana-sbpf/shuttle-test",
]

[lints]
workspace = true
