[package]
name = "solana-bpf-loader-program"
description = "Solana BPF loader"
documentation = "https://docs.rs/solana-bpf-loader-program"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
bincode = "1.3.3"
libsecp256k1 = "0.6.0"
qualifier_attr = "0.2.2"
scopeguard = "1.2.0"
solana-account = "2.2.1"
solana-account-info = "2.2.1"
solana-big-mod-exp = "2.2.1"
solana-bincode = "2.2.1"
solana-blake3-hasher = "2.2.1"
solana-bn254 = "2.2.1"
solana-clock = "2.2.1"
solana-compute-budget = "2.2.4"
solana-cpi = "2.2.1"
solana-curve25519 = "2.2.4"
solana-feature-set = "2.2.1"
solana-hash = "2.2.1"
solana-instruction = "2.2.1"
solana-keccak-hasher = "2.2.1"
solana-loader-v3-interface = { version = "3.0.0", features = ["serde"] }
solana-loader-v4-interface = { version = "2.2.1", features = ["bincode"] }
solana-log-collector = "2.2.4"
solana-measure = "2.2.4"
solana-packet = "2.2.1"
solana-poseidon = "2.2.4"
solana-precompiles = "2.2.1"
solana-program-entrypoint = "2.2.1"
solana-program-memory = "2.2.1"
solana-program-runtime = { path = "../../program-runtime" }
solana-pubkey = "2.2.1"
solana-sbpf = "0.10.0"
solana-sdk-ids = "2.2.1"
solana-secp256k1-recover = "2.2.1"
solana-sha256-hasher = "2.2.1"
solana-stable-layout = "2.2.1"
solana-system-interface = "1.0.0"
solana-sysvar = "2.2.1"
solana-sysvar-id = "2.2.1"
solana-timings = "2.2.4"
solana-transaction-context = { version = "2.2.1", features = ["bincode"] }
solana-type-overrides = "2.2.4"
thiserror = "2.0.16"

[dev-dependencies]
assert_matches = "1.5.0"
criterion = "0.5.1"
rand = "0.8.5"
solana-bpf-loader-program = { path = ".", features = ["svm-internal"] }
solana-epoch-rewards = "2.2.1"
solana-epoch-schedule = "2.2.1"
solana-fee-calculator = "2.2.1"
solana-last-restart-slot = "2.2.1"
solana-program = "2.2.1"
solana-pubkey = { version = "2.2.1", features = ["rand"] }
solana-rent = "2.2.1"
solana-slot-hashes = "2.2.1"
solana-transaction-context = { version = "2.2.1", features = [
    "dev-context-only-utils",
] }
static_assertions = "1.1.0"
test-case = "3.3.1"

[lib]
crate-type = ["lib"]
name = "solana_bpf_loader_program"

[[bench]]
name = "serialization"
harness = false

[[bench]]
name = "bpf_loader_upgradeable"
harness = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[features]
default = ["metrics"]
metrics = ["solana-program-runtime/metrics"]
shuttle-test = [
    "solana-type-overrides/shuttle-test",
    "solana-program-runtime/shuttle-test",
    "solana-sbpf/shuttle-test",
]
svm-internal = []
